--- a/c/nethack.html
+++ b/c/nethack.html
@@ -1,103 +1,146 @@
 <html>
 <head>
-	<title>termlib ANSI-Mapping Sample</title>
+	<title>NetHack</title>
 <style type="text/css">
-body,p,a,td,li {
-	font-family: courier,fixed,swiss,sans-serif;
-	font-size: 12px;
-	color: #cccccc;
-}
-.lh15 {
-	line-height: 15px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.term {
-	font-family: "Courier New",courier,fixed,monospace;
-	font-size: 12px;
-	color: #94aad6;
-	background: none;
-	letter-spacing: 1px;
-}
-.term .termReverse {
-	color: #232e45;
-	background: #95a9d5;
+html, body {
+  color: #333;
 }
 
-a,a:link,a:visited {
-	text-decoration: none;
-	color: #77dd11;
-}
-a:hover {
-	text-decoration: underline;
-	color: #77dd11;
-}
-a:active {
-	text-decoration: underline;
-	color: #eeeeee;
+body {
+    font: 13.34px helvetica,arial,freesans,clean,sans-serif;
+    line-height: 1.4;
+    margin: 30px;
+    background: #F0F0F0;
 }
 
-a.termopen,a.termopen:link,a.termopen:visited {
-	text-decoration: none;
-	color: #77dd11;
-	background: none;
-}
-a.termopen:hover {
-	text-decoration: none;
-	color: #222222;
-	background: #77dd11;
-}
-a.termopen:active {
-	text-decoration: none;
-	color: #222222;
-	background: #eeeeee;
+h1, h2, h3, h4, h5, h6 {
+    margin: 20px 0 10px;
+    padding: 0;
+    font-weight: bold;
+    cursor: text;
+    position: relative;
+    color:#E0E0E0;
+    text-indent: 10px;
 }
 
-table.inventory td {
-	padding-bottom: 20px !important;
+h1 {
+    text-indent: 30px;
+    display: inline;
+    margin-bottom: 100px;
+    /*vertical-align:middle*/
+	bottom: 20px;
+    
 }
 
-tt,pre {
-	font-family: courier,fixed,monospace;
-	color: #ccffaa;
-	font-size: 12px;
-	line-height: 15px;
+.heading, .windows, .infobox {
+    margin-top: 0px;
+    margin-bottom: 0px;    
 }
 
-.dimmed,.dimmed *,.dimmed * * {
-	background-color: #222222 !important;
-	color: #333333 !important;
+.heading {
+    overflow:auto;
+    background: #2C458D;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
 }
 
-@media print {
-	body { background-color: #ffffff; }
-	body,p,a,td,li,tt {
-		color: #000000;
-	}
-	pre,.prop,.markup {
-		color: #000000;
-	}
-	h1 {
-		color: #000000;
-	}
-	a,a:link,a:visited {
-		color: #000000;
-	}
-	a:hover {
-		color: #000000;
-	}
-	a:active {
-		color: #000000;
-	}
-	table.inventory {
-		display: none;
-	}
+.windows {
+    overflow:auto;
+    border-color: #2C458D;
+    border-style: solid;    
 }
+
+.infobox {
+    overflow:auto;    
+    background: #2C458D;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+li, ul {
+    list-style: none;
+    padding-left: 14px;
+    color:#B0B0B0;
+}
+
+a:link, a:visited {    
+    color:#FF9000;;
+}
+
+img {
+    border-style: none;
+}
+
+iframe {
+    position: relative;
+    top: 6px;
+}
+
+.terminal {
+    border: 2px solid black;
+    font-family: courier,fixed,swiss,monospace,sans-serif;
+    font-size: 12px;
+    color: #bbbbbb;
+    background: #000000;   
+    border-collapse: collapse
+}
+
+.screen {
+    border: 2px solid black;
+}
+
+.contributor ul {
+    padding: 0px;
+    margin: 0px;
+}
+.contributor li {
+    display: inline;
+    padding: 0px;
+    margin: 0px;
+    height: 25px !important;
+    line-height: 25px;
+}
+
+.contributor-info {
+    width: 350px;
+}
+
+.donate {
+    margin-top: 20px;
+}
+
+
+#infobox {
+    margin-left: 20px;
+    padding-bottom: 10px;
+}
+
 
 </style>
 </head>
+
 <body bgcolor="#222222" link="#77dd11" text="#cccccc" alink="#eeeeee" vlink="#77dd11"
 topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginheight="0" marginwidth="0">
-<div id="termDiv" style="position:absolute; visibility: hidden; z-index:1;"/>
-<script language="JavaScript" type="text/javascript" src="rain.js"></script>
+
+                    <canvas id="tty" class="screen" width="640" height="480">
+                        Terminal uses canvas
+                    </canvas>
+
+
+
+    <script src="terminal.js"></script>
+    <script src="terminal-input.js"></script>
+    <script src="moxie.js"></script>
+    <script src="nethack.js"></script>
+
 </body>
 </html>
